crates/memscribe-testkit/tests/snapshots/nodes__otel__genai__happy_path_decision_then_edits.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: nodes
---
[
  {
    "node": "conversation",
    "session_id": "sess-happy-001",
    "turn_range": {
      "start": 1,
      "end": 2
    },
    "text": "Let's use Postgres instead of MySQL for the persistence layer.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "use",
        "offset": 6
      },
      {
        "rule_id": "decision_verb.polite_select",
        "category": "decision_verb",
        "matched_text": "Let's use",
        "offset": 0
      },
      {
        "rule_id": "rejection.instead_of",
        "category": "rejection",
        "matched_text": "instead of",
        "offset": 19
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/otel/genai/happy_path_decision_then_edits.jsonl",
        "byte_offset": 276,
        "line_no": 2
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "Let's use Postgres instead of MySQL for the persistence layer.",
    "considered_options": [
      {
        "text": "MySQL",
        "chosen": false
      },
      {
        "text": "Postgres",
        "chosen": true
      }
    ],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 1,
      "end": 2
    },
    "fact_status": "observed",
    "timestamp": "2026-06-22T10:00:05Z"
  },
  {
    "node": "episode",
    "path": "db/config.rs",
    "diff": {
      "path": "db/config.rs",
      "old": null,
      "new": null,
      "unified": null,
      "added_lines": 12,
      "removed_lines": 4
    },
    "git": {
      "sha": "abc1234",
      "branch": "main"
    },
    "episode_id": "693cec409d8ab5556b605faed5e2c901525b4d964e9d9a2815bfbe6a4da1bf01"
  },
  {
    "node": "episode",
    "path": "db/pool.rs",
    "diff": {
      "path": "db/pool.rs",
      "old": null,
      "new": null,
      "unified": null,
      "added_lines": 30,
      "removed_lines": 9
    },
    "git": {
      "sha": "abc1234",
      "branch": "main"
    },
    "episode_id": "92496e034cb5c70f7f8015bef66f30b4cc4eaeb6490875947d7c32732236af8d"
  },
  {
    "node": "binding",
    "from": "decision:sess-happy-001:1",
    "to": "episode:693cec409d8ab5556b605faed5e2c901525b4d964e9d9a2815bfbe6a4da1bf01",
    "relation": "produced",
    "prov": {
      "used_session": "sess-happy-001",
      "used_decision": "decision:sess-happy-001:1",
      "was_generated_by_session": "sess-happy-001",
      "t_use": "2026-06-22T10:00:05Z",
      "t_gen": "2026-06-22T10:00:12Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.5,
      "confidence": 0.5,
      "lift": 1.0,
      "phi": 0.0,
      "p": 1.0
    }
  },
  {
    "node": "binding",
    "from": "decision:sess-happy-001:1",
    "to": "episode:92496e034cb5c70f7f8015bef66f30b4cc4eaeb6490875947d7c32732236af8d",
    "relation": "produced",
    "prov": {
      "used_session": "sess-happy-001",
      "used_decision": "decision:sess-happy-001:1",
      "was_generated_by_session": "sess-happy-001",
      "t_use": "2026-06-22T10:00:05Z",
      "t_gen": "2026-06-22T10:00:15Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.5,
      "confidence": 0.5,
      "lift": 1.0,
      "phi": 0.0,
      "p": 1.0
    }
  }
]
