crates/memscribe-testkit/tests/snapshots/nodes__otel__genai__interleaved_arcs.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: nodes
---
[
  {
    "node": "conversation",
    "session_id": "sess-otel-interleaved-005",
    "turn_range": {
      "start": 1,
      "end": 2
    },
    "text": "Let's use argon2 for password hashing in the auth module.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "use",
        "offset": 6
      },
      {
        "rule_id": "decision_verb.polite_select",
        "category": "decision_verb",
        "matched_text": "Let's use",
        "offset": 0
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/otel/genai/interleaved_arcs.jsonl",
        "byte_offset": 310,
        "line_no": 2
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "Let's use argon2 for password hashing in the auth module.",
    "considered_options": [
      {
        "text": "argon2",
        "chosen": true
      }
    ],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 1,
      "end": 2
    },
    "fact_status": "observed",
    "timestamp": "2026-06-22T14:00:05Z"
  },
  {
    "node": "episode",
    "path": "src/auth.rs",
    "diff": {
      "path": "src/auth.rs",
      "old": null,
      "new": null,
      "unified": null,
      "added_lines": 4,
      "removed_lines": 4
    },
    "git": {
      "sha": "11112222333344445555",
      "branch": "main"
    },
    "episode_id": "483c9ee4c139cc495e9b4239bcc9408196db728327610fc048c3d4c6f031c435"
  },
  {
    "node": "conversation",
    "session_id": "sess-otel-interleaved-005",
    "turn_range": {
      "start": 6,
      "end": 7
    },
    "text": "Actually, let's switch to scrypt for the auth module and tune the cost in config.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "switch to",
        "offset": 16
      },
      {
        "rule_id": "decision_verb.polite_select",
        "category": "decision_verb",
        "matched_text": "let's switch to",
        "offset": 10
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/otel/genai/interleaved_arcs.jsonl",
        "byte_offset": 1220,
        "line_no": 5
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "Actually, let's switch to scrypt for the auth module and tune the cost in config.",
    "considered_options": [],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 6,
      "end": 7
    },
    "fact_status": "observed",
    "timestamp": "2026-06-22T14:01:00Z"
  },
  {
    "node": "episode",
    "path": "src/auth.rs",
    "diff": {
      "path": "src/auth.rs",
      "old": null,
      "new": null,
      "unified": null,
      "added_lines": 4,
      "removed_lines": 4
    },
    "git": {
      "sha": "11112222333344445555",
      "branch": "main"
    },
    "episode_id": "e86ce0e9cf5c37cf34528bfc0da4756f1ccc1c65312f7eacba89299eb36b5bfd"
  },
  {
    "node": "episode",
    "path": "src/config.rs",
    "diff": {
      "path": "src/config.rs",
      "old": null,
      "new": null,
      "unified": null,
      "added_lines": 1,
      "removed_lines": 1
    },
    "git": {
      "sha": "11112222333344445555",
      "branch": "main"
    },
    "episode_id": "f37b9adc005367066f27a7eb3883108a9d068a7dd9688458aa91fcc8cc2bd9fe"
  },
  {
    "node": "binding",
    "from": "decision:sess-otel-interleaved-005:1",
    "to": "episode:483c9ee4c139cc495e9b4239bcc9408196db728327610fc048c3d4c6f031c435",
    "relation": "produced",
    "prov": {
      "used_session": "sess-otel-interleaved-005",
      "used_decision": "decision:sess-otel-interleaved-005:1",
      "was_generated_by_session": "sess-otel-interleaved-005",
      "t_use": "2026-06-22T14:00:05Z",
      "t_gen": "2026-06-22T14:00:12Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": null
  },
  {
    "node": "binding",
    "from": "decision:sess-otel-interleaved-005:6",
    "to": "episode:e86ce0e9cf5c37cf34528bfc0da4756f1ccc1c65312f7eacba89299eb36b5bfd",
    "relation": "produced",
    "prov": {
      "used_session": "sess-otel-interleaved-005",
      "used_decision": "decision:sess-otel-interleaved-005:6",
      "was_generated_by_session": "sess-otel-interleaved-005",
      "t_use": "2026-06-22T14:01:00Z",
      "t_gen": "2026-06-22T14:01:08Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.333333,
      "confidence": 0.5,
      "lift": 0.75,
      "phi": -0.5,
      "p": 0.386476
    }
  },
  {
    "node": "binding",
    "from": "decision:sess-otel-interleaved-005:6",
    "to": "episode:f37b9adc005367066f27a7eb3883108a9d068a7dd9688458aa91fcc8cc2bd9fe",
    "relation": "produced",
    "prov": {
      "used_session": "sess-otel-interleaved-005",
      "used_decision": "decision:sess-otel-interleaved-005:6",
      "was_generated_by_session": "sess-otel-interleaved-005",
      "t_use": "2026-06-22T14:01:00Z",
      "t_gen": "2026-06-22T14:01:12Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.333333,
      "confidence": 0.5,
      "lift": 1.5,
      "phi": 0.5,
      "p": 0.386476
    }
  }
]
