crates/memscribe-testkit/tests/snapshots/nodes__otel__genai__multi_edit_single_commit.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: nodes
---
[
  {
    "node": "conversation",
    "session_id": "sess-otel-multiedit-006",
    "turn_range": {
      "start": 1,
      "end": 2
    },
    "text": "Let's migrate to anyhow for error handling across the request, handler, and router modules.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "migrate to",
        "offset": 6
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/otel/genai/multi_edit_single_commit.jsonl",
        "byte_offset": 308,
        "line_no": 2
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "Let's migrate to anyhow for error handling across the request, handler, and router modules.",
    "considered_options": [
      {
        "text": "anyhow",
        "chosen": true
      }
    ],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 1,
      "end": 2
    },
    "fact_status": "observed"
  },
  {
    "node": "episode",
    "path": "src/request.rs",
    "diff": {
      "path": "src/request.rs",
      "old": null,
      "new": null,
      "unified": null,
      "added_lines": 1,
      "removed_lines": 1
    },
    "git": {
      "sha": "aaaa1111bbbb2222cccc",
      "branch": "main"
    },
    "episode_id": "d1ee38c1a4a4f80a51a85a4c385cff9ca57343590c37b5eab533d134ce2a6052"
  },
  {
    "node": "episode",
    "path": "src/handler.rs",
    "diff": {
      "path": "src/handler.rs",
      "old": null,
      "new": null,
      "unified": null,
      "added_lines": 1,
      "removed_lines": 1
    },
    "git": {
      "sha": "aaaa1111bbbb2222cccc",
      "branch": "main"
    },
    "episode_id": "ec19e4512159137b4d4f5e56c553cfdc9d091ea82b1d15bffc09e4f5f211fcba"
  },
  {
    "node": "episode",
    "path": "src/router.rs",
    "diff": {
      "path": "src/router.rs",
      "old": null,
      "new": null,
      "unified": null,
      "added_lines": 1,
      "removed_lines": 1
    },
    "git": {
      "sha": "aaaa1111bbbb2222cccc",
      "branch": "main"
    },
    "episode_id": "d483867cee9eb39a022ba3fb2c2a690a4c4317eeacb6cd5e8184983213bd9884"
  },
  {
    "node": "binding",
    "from": "decision:sess-otel-multiedit-006:1",
    "to": "episode:d1ee38c1a4a4f80a51a85a4c385cff9ca57343590c37b5eab533d134ce2a6052",
    "relation": "produced",
    "prov": {
      "used_session": "sess-otel-multiedit-006",
      "used_decision": "decision:sess-otel-multiedit-006:1",
      "was_generated_by_session": "sess-otel-multiedit-006",
      "t_use": "2026-06-22T15:00:05Z",
      "t_gen": "2026-06-22T15:00:12Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.333333,
      "confidence": 0.333333,
      "lift": 1.0,
      "phi": 0.0,
      "p": 1.0
    }
  },
  {
    "node": "binding",
    "from": "decision:sess-otel-multiedit-006:1",
    "to": "episode:d483867cee9eb39a022ba3fb2c2a690a4c4317eeacb6cd5e8184983213bd9884",
    "relation": "produced",
    "prov": {
      "used_session": "sess-otel-multiedit-006",
      "used_decision": "decision:sess-otel-multiedit-006:1",
      "was_generated_by_session": "sess-otel-multiedit-006",
      "t_use": "2026-06-22T15:00:05Z",
      "t_gen": "2026-06-22T15:00:20Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.333333,
      "confidence": 0.333333,
      "lift": 1.0,
      "phi": 0.0,
      "p": 1.0
    }
  },
  {
    "node": "binding",
    "from": "decision:sess-otel-multiedit-006:1",
    "to": "episode:ec19e4512159137b4d4f5e56c553cfdc9d091ea82b1d15bffc09e4f5f211fcba",
    "relation": "produced",
    "prov": {
      "used_session": "sess-otel-multiedit-006",
      "used_decision": "decision:sess-otel-multiedit-006:1",
      "was_generated_by_session": "sess-otel-multiedit-006",
      "t_use": "2026-06-22T15:00:05Z",
      "t_gen": "2026-06-22T15:00:16Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.333333,
      "confidence": 0.333333,
      "lift": 1.0,
      "phi": 0.0,
      "p": 1.0
    }
  }
]
