crates/memscribe-testkit/tests/snapshots/nodes__otel__genai__rejected_alternative.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: nodes
---
[
  {
    "node": "conversation",
    "session_id": "sess-reject-001",
    "turn_range": {
      "start": 1,
      "end": 2
    },
    "text": "We should use Stripe instead of PayPal for the checkout integration.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "use",
        "offset": 10
      },
      {
        "rule_id": "rejection.instead_of",
        "category": "rejection",
        "matched_text": "instead of",
        "offset": 21
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/otel/genai/rejected_alternative.jsonl",
        "byte_offset": 283,
        "line_no": 2
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "We should use Stripe instead of PayPal for the checkout integration.",
    "considered_options": [
      {
        "text": "PayPal",
        "chosen": false
      },
      {
        "text": "Stripe",
        "chosen": true
      }
    ],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 1,
      "end": 2
    },
    "fact_status": "observed"
  },
  {
    "node": "episode",
    "path": "checkout/stripe.rs",
    "diff": {
      "path": "checkout/stripe.rs",
      "old": null,
      "new": null,
      "unified": null,
      "added_lines": 48,
      "removed_lines": 0
    },
    "git": {
      "sha": "def5678",
      "branch": "feat/payments"
    },
    "episode_id": "05edecd3835e7699baa29183276ba03358b1020702e2adf3453c08fad31b6336"
  },
  {
    "node": "binding",
    "from": "decision:sess-reject-001:1",
    "to": "episode:05edecd3835e7699baa29183276ba03358b1020702e2adf3453c08fad31b6336",
    "relation": "produced",
    "prov": {
      "used_session": "sess-reject-001",
      "used_decision": "decision:sess-reject-001:1",
      "was_generated_by_session": "sess-reject-001",
      "t_use": "2026-06-22T11:00:04Z",
      "t_gen": "2026-06-22T11:00:12Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": null
  }
]
