crates/memscribe-testkit/tests/snapshots/nodes__otel__genai__rewind_compaction.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: nodes
---
[
  {
    "node": "conversation",
    "session_id": "sess-otel-rewind-007",
    "turn_range": {
      "start": 1,
      "end": 2
    },
    "text": "Let's use MongoDB for the document store. Set up the driver and the connection config.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "use",
        "offset": 6
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/otel/genai/rewind_compaction.jsonl",
        "byte_offset": 323,
        "line_no": 2
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "Let's use MongoDB for the document store.",
    "considered_options": [
      {
        "text": "MongoDB",
        "chosen": true
      }
    ],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 1,
      "end": 2
    },
    "fact_status": "observed"
  },
  {
    "node": "conversation",
    "session_id": "sess-otel-rewind-007",
    "turn_range": {
      "start": 4,
      "end": 5
    },
    "text": "Actually let's use Postgres with JSONB for the document store instead. Switch to Postgres and drop the MongoDB plan.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "use",
        "offset": 15
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/otel/genai/rewind_compaction.jsonl",
        "byte_offset": 1947,
        "line_no": 5
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "Actually let's use Postgres with JSONB for the document store instead.",
    "considered_options": [
      {
        "text": "Postgres",
        "chosen": true
      }
    ],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 4,
      "end": 5
    },
    "fact_status": "observed"
  },
  {
    "node": "episode",
    "path": "src/store.rs",
    "diff": {
      "path": "src/store.rs",
      "old": null,
      "new": null,
      "unified": null,
      "added_lines": 2,
      "removed_lines": 2
    },
    "git": {
      "sha": "0718293a4b5c6d7e8f90",
      "branch": "feat/persistence-pivot"
    },
    "episode_id": "a13641aef33f872c9010f4a4a5cdb9c8859b8fd6828c81dca1305ccb43d3e06f"
  },
  {
    "node": "binding",
    "from": "decision:sess-otel-rewind-007:4",
    "to": "episode:a13641aef33f872c9010f4a4a5cdb9c8859b8fd6828c81dca1305ccb43d3e06f",
    "relation": "produced",
    "prov": {
      "used_session": "sess-otel-rewind-007",
      "used_decision": "decision:sess-otel-rewind-007:4",
      "was_generated_by_session": "sess-otel-rewind-007",
      "t_use": "2026-06-22T20:00:40Z",
      "t_gen": "2026-06-22T20:00:53Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": null
  }
]
