crates/memscribe-testkit/tests/snapshots/nodes__otel__genai__subagent_thread.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: nodes
---
[
  {
    "node": "conversation",
    "session_id": "sess-otel-main-008",
    "turn_range": {
      "start": 1,
      "end": 2
    },
    "text": "Let's use a dedicated background worker for the email queue. Extract the send loop into a worker module.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "use",
        "offset": 6
      },
      {
        "rule_id": "decision_verb.polite_select",
        "category": "decision_verb",
        "matched_text": "Let's use",
        "offset": 0
      },
      {
        "rule_id": "action.restructure_into",
        "category": "action_request",
        "matched_text": "Extract the send loop into",
        "offset": 61
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/otel/genai/subagent_thread.jsonl",
        "byte_offset": 316,
        "line_no": 2
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "Let's use a dedicated background worker for the email queue.",
    "considered_options": [],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 1,
      "end": 2
    },
    "fact_status": "observed",
    "timestamp": "2026-06-22T21:00:06Z"
  },
  {
    "node": "conversation",
    "session_id": "sess-otel-main-008",
    "turn_range": {
      "start": 3,
      "end": 4
    },
    "text": "Let's adopt a tokio worker loop for the email queue in the worker module.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "adopt",
        "offset": 6
      },
      {
        "rule_id": "decision_verb.polite_select",
        "category": "decision_verb",
        "matched_text": "Let's adopt",
        "offset": 0
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/otel/genai/subagent_thread.jsonl",
        "byte_offset": 971,
        "line_no": 4
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "Let's adopt a tokio worker loop for the email queue in the worker module.",
    "considered_options": [],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 3,
      "end": 4
    },
    "fact_status": "observed",
    "timestamp": "2026-06-22T21:00:14Z"
  },
  {
    "node": "episode",
    "path": "src/worker/email.rs",
    "diff": {
      "path": "src/worker/email.rs",
      "old": null,
      "new": null,
      "unified": null,
      "added_lines": 3,
      "removed_lines": 0
    },
    "git": {
      "sha": "18293a4b5c6d7e8f9001",
      "branch": "feat/worker-split"
    },
    "episode_id": "326e79c6dbb11ebb44596637a9d2c13ba5975e1b749e99b5ae38f55e57195f00"
  },
  {
    "node": "binding",
    "from": "decision:sess-otel-main-008:3",
    "to": "episode:326e79c6dbb11ebb44596637a9d2c13ba5975e1b749e99b5ae38f55e57195f00",
    "relation": "produced",
    "prov": {
      "used_session": "sess-otel-main-008",
      "used_decision": "decision:sess-otel-main-008:3",
      "was_generated_by_session": "sess-otel-main-008",
      "t_use": "2026-06-22T21:00:14Z",
      "t_gen": "2026-06-22T21:00:22Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": null
  }
]
